force-app/main/default/objects/TaskRule__mdt/TaskRule__mdt.object-meta.xml
<CustomObject>
    <description>Motor de configuracao para regras de criacao automatica de tarefas.</description>
    <label>Regra de Tarefa</label>
    <pluralLabel>Regras de Tarefa</pluralLabel>
</CustomObject>