force-app/main/default/objects/TaskRule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a regra esta ativa e pode ser avaliada pelo motor.</description>
    <label>Ativa</label>
    <type>Checkbox</type>
</CustomField>