force-app/main/default/objects/TaskRule__mdt/fields/AllowMultiple__c.field-meta.xml
<CustomField>
    <fullName>AllowMultiple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite a criacao de multiplas tarefas para a mesma regra e o mesmo contexto.</description>
    <label>Permitir Multiplas Tarefas</label>
    <type>Checkbox</type>
</CustomField>