force-app/main/default/objects/TaskRule__mdt/fields/DaysInStage__c.field-meta.xml
<CustomField>
    <fullName>DaysInStage__c</fullName>
    <description>Quantidade de dias que a oportunidade deve permanecer na fase para disparar a regra.</description>
    <label>Dias na Fase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>