force-app/main/default/objects/TaskRule__mdt/fields/DependencyField__c.field-meta.xml
<CustomField>
    <fullName>DependencyField__c</fullName>
    <description>API Name do campo que deve ser validado para aplicacao da regra.</description>
    <label>Campo de Dependencia</label>
    <length>80</length>
    <type>Text</type>
</CustomField>