force-app/main/default/objects/TaskRule__mdt/fields/DependencyValue__c.field-meta.xml
<CustomField>
    <fullName>DependencyValue__c</fullName>
    <description>Valor esperado no campo de dependencia para a regra ser aplicada.</description>
    <label>Valor de Dependencia</label>
    <length>80</length>
    <type>Text</type>
</CustomField>