force-app/main/default/objects/TaskRule__mdt/fields/DueDateBase__c.field-meta.xml
<CustomField>
    <fullName>DueDateBase__c</fullName>
    <description>Data base utilizada para o calculo da data de vencimento da tarefa.</description>
    <label>Base da Data de Vencimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreatedDate</fullName>
                <label>Data de Criação</label>
            </value>
            <value>
                <fullName>StageChangeDate</fullName>
                <label>Data de Mudança de Fase</label>
            </value>
            <value>
                <fullName>OrderCreatedDate</fullName>
                <label>Data de Criação do Pedido</label>
            </value>
            <value>
                <fullName>OrderClosedDate</fullName>
                <label>Data de Fecho do Pedido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>