force-app/main/default/objects/TaskRule__mdt/fields/DueDateOffsetDays__c.field-meta.xml
<CustomField>
    <fullName>DueDateOffsetDays__c</fullName>
    <description>Quantidade de dias a somar a data base para definir o vencimento da tarefa.</description>
    <label>Dias de Acréscimo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>