force-app/main/default/objects/TaskRule__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Fase da oportunidade para a qual a regra se aplica (quando aplicavel).</description>
    <label>Fase da Oportunidade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>