force-app/main/default/objects/TaskRule__mdt/fields/TaskSubjectTemplate__c.field-meta.xml
<CustomField>
    <fullName>TaskSubjectTemplate__c</fullName>
    <description>Texto base do assunto da tarefa, podendo conter variaveis dinamicas.</description>
    <label>Template do Assunto da Tarefa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>