force-app/main/default/objects/TaskRule__mdt/fields/TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>TriggerEvent__c</fullName>
    <description>Evento especifico que aciona a avaliacao da regra.</description>
    <label>Evento de Gatilho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnCreate</fullName>
                <label>Na Criação</label>
            </value>
            <value>
                <fullName>OnUpdate</fullName>
                <label>Na Atualização</label>
            </value>
            <value>
                <fullName>OnStageChange</fullName>
                <label>Na Mudança de Fase</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <label>Agendado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>