force-app/main/default/objects/TaskRule__mdt/fields/TriggerType__c.field-meta.xml
<CustomField>
    <fullName>TriggerType__c</fullName>
    <description>Define o objeto ou contexto que dispara a regra.</description>
    <label>Tipo de Gatilho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <label>Oportunidade</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <label>Pedido</label>
            </value>
            <value>
                <fullName>ServiceOrder</fullName>
                <label>Ordem de Serviço</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <label>Agendado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>